Fix Factory Function issue. Add DOM element and game loop

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Battleship</title>
 </head>
 <body>
+    <div id="p1-div">
+        <div class="content">
+
+        </div>
+    </div>
+    <div id="p2-div">
+        <div class="content">
+
+        </div>
+    </div>
     
     <script src="js/main.js"></script>
 </body>
